Update WAM7 Dynamic Parameter Identification.html

--- a/WAM7 Dynamic Parameter Identification.html
+++ b/WAM7 Dynamic Parameter Identification.html
@@ -1684,6 +1684,7 @@ div#notebook {
 <p><a href="http://dx.doi.org/10.5281/zenodo.10537"><img src="https://zenodo.org/badge/920/cdsousa/wam7_dyn_ident.png" alt="DOI"></a></p>
 <p><em>Experimental code and data associated with the paper:</em></p>
 <p><strong>Cristóvão D. Sousa and Rui Cortesão, &quot;Physical feasibility of robot base inertial parameter identification: A linear matrix inequality approach,&quot; The International Journal of Robotics Research, vol. 33, no. 6, pp. 931–944, May. 2014, doi: <a href="http://dx.doi.org/10.1177/0278364913514870">10.1177/0278364913514870</a></strong></p>
+<p><a href="http://www.researchgate.net/publication/262483999_Physical_feasibility_of_robot_base_inertial_parameter_identification_A_linear_matrix_inequality_approach">Postprint availabe from ResearchGate</a></p>
 <hr>
 <h2 id="authors">Authors</h2>
 <ul>
